Fixes to reserve button and reserve info alignment on various devices

--- a/app/pages/reservation/reservation-time/_reservation-time.scss
+++ b/app/pages/reservation/reservation-time/_reservation-time.scss
@@ -3,7 +3,7 @@
 
   &__controls {
     text-align: right;
-    @media (max-width: $screen-xs-max){
+    @media (max-width: $screen-md-max){
       padding-bottom: 8px;
     }
     .btn {
